--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "suntime",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.js",
   "scripts": {
     "start": "npx expo start --clear",
     "android": "npx expo start --android",
@@ -12,7 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^54.0.31",
+    "expo": "~54.0.0",
     "expo-crypto": "~15.0.8",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
@@ -21,23 +21,21 @@
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "^31.0.13",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.454.0",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-worklets": "^0.5.1",
-    "react-native-worklets-core": "^1.6.2"
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^54.0.9"
+    "babel-preset-expo": "~54.0.9"
   },
   "private": true
 }
