--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
     "ios": "npx expo start --ios"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~54.0.0",
-    "expo-crypto": "~15.0.8",
-    "expo-haptics": "~15.0.8",
-    "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-local-authentication": "~17.0.8",
-    "expo-location": "~19.0.8",
-    "expo-notifications": "~0.32.16",
-    "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.9",
+    "expo": "~52.0.0",
+    "expo-crypto": "~14.0.0",
+    "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.0",
+    "expo-linear-gradient": "~14.0.0",
+    "expo-local-authentication": "~15.0.0",
+    "expo-location": "~18.0.0",
+    "expo-notifications": "~0.29.0",
+    "expo-splash-screen": "~0.29.0",
+    "expo-status-bar": "~2.0.0",
     "lucide-react-native": "^0.454.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-worklets-core": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "~54.0.9"
+    "babel-preset-expo": "~12.0.0"
   },
   "private": true
 }
