--- a/app.json
+++ b/app.json
@@ -61,8 +61,9 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "a1f98ed4-d888-454b-a9e4-028e8cc90581"
+        "projectId": "a8be570b-9407-4604-b5c2-c67906c91cc6"
       }
-    }
+    },
+    "owner": "prabaltalukdar08"
   }
 }
